sec testimonial done

--- a/index.html
+++ b/index.html
@@ -513,6 +513,118 @@
                 <h2>TESTIMONIALS</h2>
                 <p>What they're saying about us</p>
             </div>
+            <div id="section7-content">
+                <div class="section7-row">
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p><i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-1.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Saul Goodman</h3>
+                                <h4>Ceo & Founder</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-2.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Sara Wilsson</h3>
+                                <h4>Designer</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-3.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Jena Karlis</h3>
+                                <h4>Store Owner</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-4.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Matt Brandon</h3>
+                                <h4>Freelancer</h4>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-5.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>John Larson</h3>
+                                <h4>Entrepreneur</h4>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-1.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Saul Goodman</h3>
+                                <h4>Ceo & Founder</h4>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="section7-elem">
+                        <div class="section7-cadre">
+                            <p> <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Aspernatur repudiandae amet nobis ad atque quidem aliquid nisi quo
+                                exercitationem corrupti perspiciatis, consectetur deserunt similique placeat recusandae
+                                ut dolore! <i class="fa-solid fa-quote-right"></i></p>
+                            <img class="section7-img" src="./public/img/testimonials/testimonials-2.jpg" alt="">
+                            <div class="section7-name">
+                                <h3>Sara Wilsson</h3>
+                                <h4>Designer</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="section7-btnList">
+                <div class="section7-btn" id="section7Btn1"></div>
+                <div class="section7-btn" id="section7Btn2"></div>
+                <div class="section7-btn" id="section7Btn3"></div>
+                <div class="section7-btn" id="section7Btn4"></div>
+                <div class="section7-btn" id="section7Btn5"></div>
+            </div>
         </div>
     </section>
     <section id="gallery">
