--- a/index.html
+++ b/index.html
@@ -53,10 +53,22 @@
             </div>
         </div>
         <div class="modal" id="modalOne">
-            <div class="modal-content-One">
-                <span class="closeOne">&times;</span>
-                <button class="modalBtn">Inscription</button>
-                <button class="modalBtn">Connexion</button>
+            <div class="modal-content-One">            
+                <form action="/login" method="post"> 
+                    <span class="closeOne">&times;</span>
+                    <span id="title">Sign in</span>
+                    <input type="text" id="username" name="username" placeholder="Username">
+                    <input type="password" id="password" name="password" placeholder="Password">
+                    <div id="button">
+                      <input type="submit" value="Login">
+                      <span class="rip1"></span>
+                      <span class="rip2"></span>
+                    </div>
+                    <div id="linksParent">
+                      <a>Sign up</a>
+                      <a>Forgot your password?</a>
+                    </div>
+                  </form>
             </div>
         </div>
         <div class="modal" id="modalTwo">
