--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <a href="#chefs">Chefs</a>
                 <a href="#contact">Contact</a>
             </div>
-            <div><button class="button" id="btnModalOne">CONNEXION</button>
+            <div>
+                <button class="button" id="btnModalOne">CONNEXION</button>
+                <button id="toggle-dark-mode-btn"><i class="fa-solid fa-cloud-moon"></i></button>
             </div>
         </nav>
         <div class='container' id="div3">
@@ -858,7 +860,6 @@
     <button onclick="topFunction()" id="arrowBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
 
     <script src='./public/js/app.js'></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
