--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             </div>
         </div>
     </footer>
-    <button onclick="topFunction()" id="arrowBtn" title="Go to top"></button>
+    <button onclick="topFunction()" id="arrowBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
 
     <script src='./public/js/app.js'></script>
 </body>
