--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="#chefs">Chefs</a>
                 <a href="#contact">Contact</a>
             </div>
-            <div>
+            <div id="btnNavMov">
                 <button class="button" id="btnModalOne">CONNEXION</button>
                 <button id="toggle-dark-mode-btn"><i class="fa-solid fa-cloud-moon"></i></button>
             </div>
@@ -47,7 +47,7 @@
             <div>
                 <h1>Welcome to <span>molen food</span></h1>
                 <p>Delivering great food for more than 18 years!</p>
-                <button class="button">OUR MENU</button> <button class="button" style="margin-left: 15px;">BOOK A
+                <button class="button">OUR MENU</button> <button class="button" id="but2Div3" style="margin-left: 15px;">BOOK A
                     TABLE</button>
             </div>
             <div>
