media Q for header and about done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <button class="button">OUR MENU</button> <button class="button" id="but2Div3" style="margin-left: 15px;">BOOK A
                     TABLE</button>
             </div>
-            <div>
+            <div id="divPlayBtn">
                 <a class="glightbox play-btn" id="modalTwo"></a>
             </div>
         </div>
