--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
 
     <section id="about">
-        <div class="container" style="display: flex">
+        <div class="container reveal fade-bottom" style="display: flex">
             <div id="leftAbout">
                 <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
                 <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -116,7 +116,7 @@
         </div>
     </section>
     <section id="whyUs">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>WHY US</h2>
                 <p>Why Choose Our Restaurant</p>
@@ -147,7 +147,7 @@
         </div>
     </section>
     <section id="menu">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>MENU</h2>
                 <p>Check Our Tasty Menu</p>
@@ -254,7 +254,7 @@
         </div>
     </section>
     <section id="specials">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>SPECIALS</h2>
                 <p>Check Our Specials</p>
@@ -386,7 +386,7 @@
         </div>
     </section>
     <section id="events">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>EVENTS</h2>
                 <p>Organize Your Events in our Restaurant</p>
@@ -488,7 +488,7 @@
         </div>
     </section>
     <section id="reservation">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>RESERVATION</h2>
                 <p>Book a Table</p>
@@ -522,7 +522,7 @@
         </div>
     </section>
     <section id="testimonials">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>TESTIMONIALS</h2>
                 <p>What they're saying about us</p>
@@ -642,13 +642,13 @@
         </div>
     </section>
     <section id="gallery">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>GALLERY</h2>
                 <p>Some photos from Our Restaurant</p>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid reveal fade-bottom">
             <div id="groupPics">
                 <div class="picsSolo">
                     <img src="./public/img/gallery/gallery-1.jpg" alt="gallery-1" class="img-fluid">
@@ -678,7 +678,7 @@
         </div>
     </section>
     <section id="chefs">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>CHEFS</h2>
                 <p>Our Proffesional Chefs</p>
@@ -739,7 +739,7 @@
         </div>
     </section>
     <section id="contact">
-        <div class="container">
+        <div class="container reveal fade-bottom">
             <div class="title">
                 <h2>CONTACT</h2>
                 <p>Contact Us</p>
@@ -751,7 +751,7 @@
                 width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="container" id="concontact">
+        <div class="container reveal fade-bottom" id="concontact">
             <div id="leftContact">
                 <div id="info">
                     <div class="address">
