--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div>
                 <h1>Welcome to <span>molen food</span></h1>
                 <p>Delivering great food for more than 18 years!</p>
-                <button class="button">OUR MENU</button> <button class="button" id="but2Div3" style="margin-left: 15px;">BOOK A
+                <button class="button">OUR MENU</button> <button class="button" id="but2Div3"
+                    style="margin-left: 15px;">BOOK A
                     TABLE</button>
             </div>
             <div id="divPlayBtn">
@@ -821,26 +822,33 @@
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="footerLinks">
-                    <h4>Useful Links</h4>
-                    <ul>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Home</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">About us</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Services</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Terms of service</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Privacy policy</a></li>
-                    </ul>
-                </div>
-                <div class="footerLinks">
-                    <h4>Our Services</h4>
-                    <ul>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Design</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Development</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Product Management</a>
-                        </li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Marketing</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Graphic Design</a></li>
-                    </ul>
+                <div class="d-flex fashionLinks">
+                    <div class="footerLinks">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Home</a></li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">About us</a></li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Services</a></li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Terms of service</a>
+                            </li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Privacy policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footerLinks">
+                        <h4>Our Services</h4>
+                        <ul>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Design</a></li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Development</a>
+                            </li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Product
+                                    Management</a>
+                            </li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Marketing</a></li>
+                            <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Graphic Design</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="footerNews">
                     <h4>Our Newsletter</h4>
