--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
     </section>
     <footer>
         <div class="footerTop">
-            <div class="container d-flex">
+            <div class="container d-flex restaurantlyFooter">
                 <div class="footerInfo">
                     <h3>Restaurantly</h3>
                     <p>
