--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <span class="rip2"></span>
                     </div>
                     <div id="linksParent">
-                        <a>Sign up</a>
+                        <a id="inscription">Sign up</a>
                         <a>Forgot your password?</a>
                     </div>
                 </form>
