--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <input type="text" id="username" name="username" placeholder="Username">
                     <input type="password" id="password" name="password" placeholder="Password">
                     <div id="button">
-                        <input type="submit" value="Login">
+                        <input type="button" value="Login">
                         <span class="rip1"></span>
                         <span class="rip2"></span>
                     </div>
