--- a/index.html
+++ b/index.html
@@ -265,23 +265,23 @@
                 <div id="leftSpecials">
                     <ul role="tablist">
                         <li role="presentation" class="tablinks active" onclick="vTab(event, 'tab-1')">
-                            <a class="nav-link" data-bs-toggle="tab" href="#tab-1" aria-selected="true" role="tab">Modi
+                            <a class="nav-link" data-bs-toggle="tab" aria-selected="true" role="tab">Modi
                                 sit est</a>
                         </li>
                         <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-2')">
-                            <a class="nav-link" data-bs-toggle="tab" href="#tab-2" aria-selected="false" tabindex="-1"
+                            <a class="nav-link" data-bs-toggle="tab" aria-selected="false" tabindex="-1"
                                 role="tab">Unde praesentium sed</a>
                         </li>
                         <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-3')">
-                            <a class="nav-link" data-bs-toggle="tab" href="#tab-3" aria-selected="false" tabindex="-1"
+                            <a class="nav-link" data-bs-toggle="tab" aria-selected="false" tabindex="-1"
                                 role="tab">Pariatur explicabo vel</a>
                         </li>
                         <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-4')">
-                            <a class="nav-link" data-bs-toggle="tab" href="#tab-4" aria-selected="false" tabindex="-1"
+                            <a class="nav-link" data-bs-toggle="tab" aria-selected="false" tabindex="-1"
                                 role="tab">Nostrum qui quasi</a>
                         </li>
                         <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-5')">
-                            <a class="nav-link" data-bs-toggle="tab" href="#tab-5" aria-selected="false" tabindex="-1"
+                            <a class="nav-link" data-bs-toggle="tab" aria-selected="false" tabindex="-1"
                                 role="tab">Iusto ut expedita aut</a>
                         </li>
                     </ul>
