scroll match navLink with section done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <section id="home">
         <div id="firstDiv" class="container">
             <div class="divHeader" id="fashHeader">
                 <span><i class="fa-solid fa-mobile-button"></i> +1 5589 5548855</span>
@@ -27,17 +28,17 @@
                 <h1>Molen Food</h1>
             </div>
             <div>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#menu">Menu</a>
-                <a href="#specials">Specials</a>
+                <a href="#home" class="navLink">Home</a>
+                <a href="#about" class="navLink">About</a>
+                <a href="#menu" class="navLink">Menu</a>
+                <a href="#specials" class="navLink">Specials</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
-                <a href="#events">Events</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#chefs">Chefs</a>
-                <a href="#contact">Contact</a>
+                <a href="#events" class="navLink">Events</a>
+                <a href="#gallery" class="navLink">Gallery</a>
+                <a href="#chefs" class="navLink">Chefs</a>
+                <a href="#contact" class="navLink">Contact</a>
             </div>
             <div id="btnNavMov">
                 <button class="button" id="btnModalOne">CONNEXION</button>
@@ -83,6 +84,7 @@
                     allowfullscreen></iframe>
             </div>
         </div>
+    </section>
     </header>
 
     <section id="about">
