--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span><i class="fa-solid fa-mobile-button"></i> +1 5589 5548855</span>
                 <span style='padding-left: 20px;'><i class="fa-regular fa-clock"></i> <span id="date"></span> </span>
             </div>
-            <div class="divHeader">
+            <div class="divHeader" id="spanDeux">
                 <span class="spanHeader">En</span> <span>/</span> <span class="spanHeader">De</span>
             </div>
         </div>
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class='container' id="div3">
-            <div>
+            <div id="midText">
                 <h1>Welcome to <span>molen food</span></h1>
                 <p>Delivering great food for more than 18 years!</p>
                 <button class="button">OUR MENU</button> <button class="button" id="but2Div3"
